<resources>
    <string name="app_name">Calorie Cacluator</string>
    <string name="acitivity_main_height_text">Height</string>
    <string name="activity_main_weight_text">Weight</string>
    <string name="activity_main_height_edit_hint">in cm</string>
    <string name="activity_main_weight_edit_hint">in kg</string>
    <string name="activity_main_sex_text_sex">Sex</string>
    <string name="activity_main_age_text">Age</string>
    <string name="activity_main_age_edit_hint">ex:20</string>
    <string name="activity_main_calorie_text">How Much Calorie You should take</string>
    <string name="activity_main_suggest_text">Enter your information</string>
    <string name="activity_main_diet_text">I want to</string>
    <string name="activity_main_meal_button">Meal Suggestion</string>
    <string name="activity_meal_main_text">Meal Suggestion</string>
    <string name="activity_main_active_text">I am</string>
    <string-array name="Active">
        <item>sedentary (little or no exercise)</item>
        <item>lightly active (light exercise/sports 1–3 days/week)</item>
        <item>moderately active (moderate exercise/sports 3–5 days/week)</item>
        <item>very active (hard exercise/sports 6–7 days/week)</item>
        <item>extra active (very hard exercise/sports, physical job or 2x training)</item>
    </string-array>
    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Diet">
        <item>Lose weight</item>
        <item>Maintain weight</item>
        <item>Gain weight</item>
    </string-array>
</resources>