<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/acitivity_main_height_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/activity_main_weight_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_height_text" />

    <EditText
        android:id="@+id/activity_main_height_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/activity_main_height_edit_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/activity_main_height_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/activity_main_weight_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/activity_main_weight_edit_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/activity_main_weight_text"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_height_edit"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/activity_main_sex_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/activity_main_sex_text_sex"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_age_text" />

    <TextView
        android:id="@+id/activity_main_age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/activity_main_age_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_weight_text" />

    <EditText
        android:id="@+id/activity_main_age_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/activity_main_age_edit_hint"
        app:layout_constraintStart_toEndOf="@+id/activity_main_weight_text"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_weight_edit" />

    <TextView
        android:id="@+id/activity_main_calorie_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="How Much Calorie You should take"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_sex_text" />

    <TextView
        android:id="@+id/activity_main_suggest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_calorie_text" />

    <Spinner
        android:id="@+id/activity_main_sex_spinner"
        android:layout_width="175dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/activity_main_sex_text"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_age_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>